--- a/index.html
+++ b/index.html
@@ -47,16 +47,11 @@
         </table>
         <button id="submit" hidden="true" onclick="getDirections()">Calculate Route</button>
     </div>
-
-    <div id="output-display">
-        <div id="title">Recommended Order: </div>
+    <div>
+        <div id="distance+time"></div>
     </div>
-
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC873DyHcGuy0EQDvCLHQGbZsnIQp-nifI&callback=initMap&libraries=places"
-        defer></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"
         defer></script>
 </body>
 
